--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -74,3 +74,82 @@ body {
     left: 0;
     bottom: 0;
 }
+
+#form {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100%;
+    gap: 30px;
+}
+
+#input_container {
+    display: grid;
+    gap: 24px;
+}
+
+.form-label {
+    font-size: 1.2rem;
+    color: #404044;
+}
+
+.input-field {
+    display: flex;
+    align-items: center;
+    border-radius: 12px;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+}
+
+.input-field i {
+    display: flex;
+    align-items: center;
+    height: 20px;
+    width: 30px;
+    color: #5a5a5a;
+}
+
+.form-control {
+    width: 100%;
+    padding: 10px;
+    border-radius: 12px;
+    border: none;
+}
+
+.input-field .password-icon:hover {
+    cursor: pointer;
+    color: #3a3a3a;
+}
+
+.form-control:focus {
+    outline: none;
+}
+
+.input-box .input-field:focus-within {
+    outline: 2px solid #963c0f;
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px #fff !important;
+    color: #000;
+}
+
+.radio-container {
+    grid-column: span 2;
+}
+
+#gender_inputs {
+    display: flex;
+    gap: 20px;
+    margin-top: 7px;
+}
+
+.radio-box {
+    display: flex;
+    gap: 4px;
+    align-items: center;
+}
+
+.form-control[type="radio"] {
+    accent-color: #963c0f;
+}
