--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -23,9 +23,11 @@ body {
 
 .btn-default {
     display: flex;
-    height: fit-content;
+    grid-column: span 3;
+    justify-self: center;
     justify-content: center;
-    align-items: center;
+    justify-items: center;
+    width: 50%;
     padding: 8px 12px;
     border-radius: 12px;
     border: none;
@@ -153,7 +155,7 @@ input:-webkit-autofill {
 #gender_inputs {
     display: flex;
     gap: 20px;
-    margin-top: 7px;
+    margin: 7px 0 7px 0;
 }
 
 .radio-box {
@@ -164,4 +166,19 @@ input:-webkit-autofill {
 
 .form-control[type="radio"] {
     accent-color: #963c0f;
+}
+
+.error {
+    max-width: 200px;
+    margin: 5px 0 0 9px;
+    font-size: 1.2rem;
+    color: #dc2626;
+}
+
+.input-box.invalid .form-label {
+    border: 2px solid #dc2626;
+}
+
+.input-box.invalid .input-field {
+    border: 2px solid #dc2626;
 }
